--- a/Frontend/src/app/components/inicio/inicio.component.html
+++ b/Frontend/src/app/components/inicio/inicio.component.html
@@ -14,7 +14,9 @@
         </div>
         <hr>
 
-        <router-outlet></router-outlet>
+        <div class="d-flex justify-content-center">
+          <router-outlet></router-outlet>
+        </div>
 
       </div>
       <div class="col-sm-6 px-0 d-none d-sm-block">
