--- a/Frontend/src/app/components/carrinho/carrinho.component.html
+++ b/Frontend/src/app/components/carrinho/carrinho.component.html
@@ -3,7 +3,7 @@
 
   <ng-template #items>
     <div class="card">
-      <h2 class="card-header">Pedido </h2>
+      <h2 class="card-header font-weight-bold">Pedido </h2>
       <div *ngFor="let item of itensCarrinho;let i = index;">
         <p class="card-body">
           {{item.getDescricao()}} | Quantidade: {{item.getQuantidade()}} | Total: {{item.getPreco() | currency : "BRL"}}
@@ -11,9 +11,11 @@
         </p>
       </div>
 
-      <h5 [(ngModel)]="pedidoFinal" ngDefaultControl>Total do Pedido: {{pedidoFinal.precoTotal || 0 | currency : "BRL"}}</h5>
+      <div class="card-footer">
+        <h5 >Total do Pedido: {{pedidoFinal.precoTotal || 0 | currency : "BRL"}}</h5>
 
-      <button (click)="finalizarPedido()" class="btn-success btn card-body">Finalizar Pedido</button>
+        <button (click)="finalizarPedido()" class="btn-success btn card-body">Finalizar Pedido</button>
+      </div>
 
     </div>
   </ng-template>
