--- a/Frontend/src/app/components/pedidos/pedidos.component.html
+++ b/Frontend/src/app/components/pedidos/pedidos.component.html
@@ -1,5 +1,8 @@
 <div class="container mt-4">
   <h2 class="mt-4 mb-4">Meus Pedidos</h2>
+
+  <h2 *ngIf="pedidos.length <= 0">Nenhum pedido realizado ainda, veja nosso <a routerLink="/home/sabores">cardápio!</a> </h2>
+
   <ul *ngFor="let pedido of pedidos" class="card">
     <li >
       <label class="font-weight-bold">Pedido {{pedido.id}}</label>
@@ -17,7 +20,7 @@
         </ul>
 
         <p class="mb-2">Data: {{pedido.horaPedido | date : "dd/MM/yyyy HH:mm"}}</p>
-        <p class="mb-2">Total do Pedido: {{pedido.precoTotal | currency : "BRL"}}</p>
+        <p class="mb-2 font-weight-bold">Total do Pedido: {{pedido.precoTotal | currency : "BRL"}}</p>
     </li>
   </ul>
 </div>
