--- a/Frontend/src/app/components/inicio/inicio.component.html
+++ b/Frontend/src/app/components/inicio/inicio.component.html
@@ -4,7 +4,7 @@
       <div class="col-sm-6 text-black">
 
         <div class="px-5 ms-xl-4">
-          <i class="fas fa-crow fa-2x me-3 pt-5 mt-xl-4" style="color: #709085;"></i>
+<!--          <i class="fas fa-crow fa-2x me-3 pt-5 mt-xl-4" style="color: #709085;"></i>-->
           <h1 class="h1 fw-bold mb-0">Pizzaria Angular</h1>
 
           <div class="btn-group">
@@ -12,7 +12,7 @@
             <button class="btn btn-primary" routerLink="/login">Login</button>
           </div>
         </div>
-        <hr>
+<!--        <hr>-->
 
         <div class="d-flex justify-content-center">
           <router-outlet></router-outlet>
