muda nome da pizzaria

--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <header class="bg-warning py-3 text-center">
-  <h1 class="mb-0 font-weight-bold">Pizzaria Angular</h1>
+  <h1 class="mb-0 font-weight-bold">Pizzaria AC</h1>
 
   <div class="table-div">
     <table >
