remove comentarios desatualizados

--- a/Frontend/src/app/components/pedidos/pedidos.component.html
+++ b/Frontend/src/app/components/pedidos/pedidos.component.html
@@ -1,6 +1,7 @@
 <div class="container mt-4">
   <h2 class="mt-4 mb-4">Meus Pedidos</h2>
 
+  <!-- ngIf appearing for one second before initialization -->
   <h2 *ngIf="pedidos.length <= 0">Nenhum pedido realizado ainda, veja nosso <a routerLink="/home/sabores">cardápio!</a> </h2>
 
   <ul *ngFor="let pedido of pedidos" class="card">
