coloca inicializacao no ngOnInit

--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -16,7 +16,7 @@
             </span>
           </button>
         </td>
-        <td><button class="btn btn-danger" (click)="deslogar()">SAIR</button></td>
+        <td><button class="btn btn-danger" (click)="logout()">SAIR</button></td>
       </tr>
     </table>
   </div>
