--- a/Frontend/src/app/components/carrinho/carrinho.component.html
+++ b/Frontend/src/app/components/carrinho/carrinho.component.html
@@ -1,20 +1,25 @@
 <div class="container">
-  <h2 *ngIf="itensCarrinho.length == 0; else items" class="flex-column text-center">O carrinho está vazio</h2>
+  <h2 *ngIf="itensCarrinho.length == 0; else items" class="flex-column text-center">
+    O carrinho está vazio
+  </h2>
 
   <ng-template #items>
     <div class="card">
       <h2 class="card-header font-weight-bold">Pedido </h2>
       <div *ngFor="let item of itensCarrinho;let i = index;">
         <p class="card-body">
-          {{item.getDescricao()}} | Quantidade: {{item.getQuantidade()}} | Total: {{item.getPreco() | currency : "BRL"}}
+          {{item.getDescricao()}} | Quantidade: {{item.getQuantidade()}} | 
+          Total: {{item.getPreco() | currency : "BRL"}}
           <button (click)="removerDoCarrinho(i)" class="btn btn-danger">Remover</button>
         </p>
       </div>
 
       <div class="card-footer">
-        <h5 >Total do Pedido: {{pedidoFinal.precoTotal || 0 | currency : "BRL"}}</h5>
+        <h5 >Total do Pedido: {{pedidoFinal.precoTotal | currency : "BRL"}}</h5>
 
-        <button (click)="finalizarPedido()" class="btn-success btn card-body">Finalizar Pedido</button>
+        <button (click)="finalizarPedido()" class="btn-success btn card-body">
+          Finalizar Pedido
+        </button>
       </div>
 
     </div>
