--- a/Frontend/src/app/components/carrinho/carrinho.component.html
+++ b/Frontend/src/app/components/carrinho/carrinho.component.html
@@ -15,7 +15,7 @@
       </div>
 
       <div class="card-footer">
-        <h5>Total do Pedido: {{pedidoFinal.precoTotal | currency : "BRL"}}</h5>
+        <h5>Total do Pedido: {{pedidoFinal?.precoTotal | currency : "BRL"}}</h5>
 
         <button (click)="finalizarPedido()" class="btn-success btn card-body">
           Finalizar Pedido
