refatora cliente cpf pra id

--- a/Frontend/src/app/components/area-cliente/area-cliente.component.html
+++ b/Frontend/src/app/components/area-cliente/area-cliente.component.html
@@ -2,7 +2,7 @@
   <h2 class="mb-4">Meus Dados</h2>
   <div class="card">
     <div class="card-body">
-      <p class="mb-2"><strong>CPF:</strong>  {{cliente.cpf}}</p>
+      <p class="mb-2"><strong>Email:</strong>  {{cliente.email}}</p>
       <p class="mb-2"><strong>Nome:</strong> {{cliente.nome}}</p>
       <p class="mb-2"><strong>Telefone</strong> {{cliente.telefone}}</p>
     </div>
