--- a/Frontend/src/app/components/login/login.component.html
+++ b/Frontend/src/app/components/login/login.component.html
@@ -3,8 +3,10 @@
 
 <h3>Login</h3>
 
-<input type="text" class="form-control form-control-lg" formControlName="cpf" required />
-<label class="form-label">CPF</label>
+<input type="text" class="form-control form-control-lg" formControlName="email" required />
+<label class="form-label">Email</label>
+<input type="password" class="form-control form-control-lg" formControlName="senha" required />
+<label class="form-label">Senha</label>
 
 <button class="btn btn-info btn-lg btn-block" type="submit">Entrar</button>
 
